--- a/libs/clients/vehicles/project.json
+++ b/libs/clients/vehicles/project.json
@@ -17,6 +17,20 @@
         "passWithNoTests": true
       }
     },
+    "update-openapi-document": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "commands": [
+          "curl -H \"X-Road-Client: IS-DEV/GOV/10000/island-is-client\" http://localhost:8081/r1/IS-DEV/GOV/10017/Samgongustofa-Protected/getOpenAPI?serviceCode=Mitt-Svaedi-V1 > src/clientConfig.json",
+          "cat <<< $(jq '.components.schemas.ProblemDetails.additionalProperties = false' src/clientConfig.json) > src/clientConfig.json",
+          "cat <<< $(jq '.paths.\"/VehicleReportPdf\".get.responses.\"200\".content.\"application/pdf\".schema.format = \"binary\"' src/clientConfig.json) > src/clientConfig.json",
+          "cat <<< $(jq '.paths.\"/OwnershipReportPdf\".get.responses.\"200\".content.\"application/pdf\".schema.format = \"binary\"' src/clientConfig.json) > src/clientConfig.json",
+          "prettier --write src/clientConfig.json"
+        ],
+        "parallel": false,
+        "cwd": "libs/clients/vehicles"
+      }
+    },
     "schemas/external-openapi-generator": {
       "executor": "@nrwl/workspace:run-commands",
       "options": {
