Revert "chore(system-e2e): package code similar to other services so it use code outside of its workspace (#8143)"
This reverts commit fe30c076d60a711b95178f7fd185bdee57dce3a7.

--- a/apps/system-e2e/tsconfig.json
+++ b/apps/system-e2e/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "extends": "../../tsconfig.base.json",
-  "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "../../../dist/out-tsc",
-    "types": ["cypress", "@testing-library/cypress", "node"],
-    "resolveJsonModule": true,
-    "allowJs": true
+    "strict": false
   },
-  "include": ["cypress.config.ts", "src/**/*.ts", "src/**/*.js"]
+  "include": [],
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    }
+  ]
 }
