Add dev, dev/init to workspace & user-profile

--- a/apps/services/user-profile/project.json
+++ b/apps/services/user-profile/project.json
@@ -99,6 +99,26 @@
         "cwd": "apps/services/user-profile/"
       }
     },
+    "dev/init": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "commands": [
+          "yarn nx run services-user-profile:dev-services",
+          "yarn nx run services-user-profile:migrate"
+        ],
+        "parallel": false
+      }
+    },
+    "dev": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "commands": [
+          "yarn start services-user-profile",
+          "scripts/run-xroad-proxy.sh"
+        ],
+        "parallel": true
+      }
+    },
     "docker-express": {}
   },
   "tags": []
