--- a/apps/application-system/api/project.json
+++ b/apps/application-system/api/project.json
@@ -142,7 +142,8 @@
           "yarn nx run application-system-api:migrate",
           "yarn nx schemas/build-openapi application-system-api",
           "yarn nx schemas/openapi-generator api-domains-application",
-          "yarn nx schemas/build-graphql-schema api"
+          "yarn nx schemas/build-graphql-schema api",
+          "yarn dev/init services-user-profile"
         ],
         "parallel": false
       }
@@ -152,6 +153,7 @@
       "options": {
         "commands": [
           "yarn start api",
+          "yarn dev services-user-profile",
           "yarn start application-system-api",
           "yarn start application-system-form",
           "scripts/run-soffia-proxy.sh",
