--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
     "dev-services": "nx dev-services",
+    "dev": "nx dev",
+    "dev/init": "nx dev/init",
     "analyze": "cross-env ANALYZE=true nx build",
     "e2e": "nx e2e",
     "e2e-ci": "node ./scripts/e2e-ci.js",
