--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -167,7 +167,9 @@
 /libs/api/domains/content-search/                                                                   @island-is/stefna @island-is/juni
 /libs/api/domains/syslumenn/                                                                        @island-is/stefna
 /libs/api/domains/mailchimp/                                                                        @island-is/stefna
+/libs/api/domains/fiskistofa/                                                                       @island-is/stefna
 /libs/clients/syslumenn/                                                                            @island-is/stefna @island-is/juni
+/libs/clients/fiskistofa/                                                                           @island-is/stefna
 
 /libs/island-ui/                                                                                    @island-is/island-ui
 
