--- a/libs/clients/fiskistofa/project.json
+++ b/libs/clients/fiskistofa/project.json
@@ -22,7 +22,9 @@
       "builder": "@nrwl/workspace:run-commands",
       "options": {
         "commands": [
-          "curl https://gagnaveitantest.azurewebsites.net/swagger/v1/swagger.json -H 'Accept: application/json' > src/clientConfig.json"
+          "curl https://gagnaveitantest.azurewebsites.net/swagger/v1/swagger.json -H 'Accept: application/json' > src/clientConfig.json",
+          "cat <<< $(jq '.components.schemas.ProblemDetails.additionalProperties = false' src/clientConfig.json) > src/clientConfig.json",
+          "prettier --write src/clientConfig.json"
         ],
         "parallel": false,
         "cwd": "libs/clients/fiskistofa"
