--- a/apps/system-e2e/.babelrc
+++ b/apps/system-e2e/.babelrc
@@ -6,7 +6,5 @@
     "@babel/preset-env",
     "@babel/preset-typescript"
   ],
-  "plugins": [
-    "@babel/plugin-proposal-class-properties"
-  ]
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
