Include strings files in extract-strings script

--- a/apps/judicial-system/web/project.json
+++ b/apps/judicial-system/web/project.json
@@ -28,7 +28,9 @@
       "configurations": {
         "production": {}
       },
-      "outputs": ["{options.outputPath}"]
+      "outputs": [
+        "{options.outputPath}"
+      ]
     },
     "build-server": {
       "executor": "@nrwl/node:webpack",
@@ -46,7 +48,9 @@
           "inspect": false
         }
       },
-      "outputs": ["{options.outputPath}"]
+      "outputs": [
+        "{options.outputPath}"
+      ]
     },
     "serve": {
       "executor": "@nrwl/node:node",
@@ -63,7 +67,9 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": ["apps/judicial-system/web/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": [
+          "apps/judicial-system/web/**/*.{ts,tsx,js,jsx}"
+        ]
       }
     },
     "test": {
@@ -72,13 +78,15 @@
         "jestConfig": "apps/judicial-system/web/jest.config.js",
         "passWithNoTests": true
       },
-      "outputs": ["coverage/apps/judicial-system/web"]
+      "outputs": [
+        "coverage/apps/judicial-system/web"
+      ]
     },
     "docker-next": {},
     "extract-strings": {
       "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "command": "yarn ts-node -P libs/localization/tsconfig.lib.json libs/localization/scripts/extract 'apps/judicial-system/web/messages/**/*.{js,ts,tsx}'"
+        "command": "yarn ts-node -P libs/localization/tsconfig.lib.json libs/localization/scripts/extract 'apps/judicial-system/web/messages/**/*.{js,ts,tsx}' 'apps/judicial-system/web/**/strings.*.{js,ts,tsx}'"
       }
     }
   },
