feat: add owner name and ssid

--- a/libs/clients/vehicles/src/clientConfig.json
+++ b/libs/clients/vehicles/src/clientConfig.json
@@ -2219,6 +2219,14 @@
           "primaryOperator": {
             "type": "boolean",
             "nullable": true
+          },
+          "ownerSsid": {
+            "type": "string",
+            "nullable": true
+          },
+          "ownerName": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
