test(parental-leave): Happy path (#7880)
* Getting parental leave off the ground

* Agree to data providers

* Selecting a child

* rebasing from main

* Adding conditional start of new application

* Moving along with the form

* Renaming test

* login fix

* Moving along with the application. Avoiding loosing what seems to be a pretty close to working webpack config by committing it here for now.

* Moving along again, finally

* One more step

* One more step

* A couple more steps

* Adding code that I did not commit before vacation

* adding @testing-library/cypress after merge from main

* Adding testing-library commands for cypress

* Getting parental leave back on track for local development, thanks to Quan from team Deloitte.

* Finished first part of the application.

* Got the parental leave application get pretty far.

* reverting accidental changes

* Extra debugging info

* Adding e2e target for system-e2e

* Fixing broken things

* reverting some unused dependencies

* Hacking my way out of VMST API, let's see where this will take us.

* replacing data-testid usage with role-based selectors

* Getting parental leave test back on track

* tuning timeouts

* Some fixes after getting back to creating application in VMST

* Getting the parental leave running until the end without mocking email or VMST

* ref

* formatting

* runtime dependencies

* chore: move tasks to separate file, config cleanup (#8251)

* runtime dependencies - part 2

* addressing feedback and cleanup

* classifying this new test as acceptance

* Update apps/system-e2e/src/support/tasks/email.ts

Co-authored-by: Jón Levy <levy@andes.is>

* Update apps/system-e2e/src/support/email-account.ts

Co-authored-by: Jón Levy <levy@andes.is>

* Update apps/system-e2e/src/support/email-account.ts

Co-authored-by: Jón Levy <levy@andes.is>

* Update apps/system-e2e/src/integration/applications/acceptance/parental-leave.spec.ts

Co-authored-by: Jón Levy <levy@andes.is>

* Update apps/system-e2e/sr

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -260,6 +260,9 @@
       "@island.is/application/templates/parental-leave": [
         "libs/application/templates/parental-leave/src/index.ts"
       ],
+      "@island.is/application/templates/parental-leave/messages": [
+        "libs/application/templates/parental-leave/src/lib/messages.ts"
+      ],
       "@island.is/application/templates/passport": [
         "libs/application/templates/passport/src/index.ts"
       ],
