--- a/apps/judicial-system/web/project.json
+++ b/apps/judicial-system/web/project.json
@@ -78,7 +78,7 @@
     "extract-strings": {
       "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "command": "yarn ts-node -P libs/localization/tsconfig.lib.json libs/localization/scripts/extract 'apps/judicial-system/web/(messages/**/*|**/*.strings).{js,ts,tsx}'"
+        "command": "yarn ts-node -P libs/localization/tsconfig.lib.json libs/localization/scripts/extract 'apps/judicial-system/web/{messages/**/*,**/*.strings}.{js,ts,tsx}'"
       }
     }
   },
