--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -83,7 +83,7 @@ jobs:
                 echo "Checking branch against pre_release_pattern '$pre_pattern'"
                 echo "Check if this is a pre-release and if it should generate a feature-deploy"
                 if [[ "$GIT_BRANCH" =~ $pre_pattern ]]; then
-                  echo "'$GIT_BRANCH' matches 'pre_$pattern', continuing with build"  
+                  echo "'$GIT_BRANCH' matches 'pre_$pattern', continuing with build"
                   echo "::set-output name=PRE_CHECK::feature-deploy"
                   echo "::set-output name=PRE_RELEASE::true"
                   exit 0
@@ -123,7 +123,7 @@ jobs:
                 echo "Checking branch against pre_release_pattern '$pre_pattern'"
                 echo "Check if this is a pre-release and if it should generate a feature-deploy"
                 if [[ "$GIT_BRANCH" =~ $pre_pattern ]]; then
-                  echo "'$GIT_BRANCH' matches 'pre_$pattern', continuing with build"  
+                  echo "'$GIT_BRANCH' matches 'pre_$pattern', continuing with build"
                   echo "::set-output name=PRE_CHECK::feature-deploy"
                   echo "::set-output name=PRE_RELEASE::true"
                   exit 0
@@ -591,7 +591,7 @@ jobs:
     needs:
       - prepare
       - pre-checks
-    if: needs.prepare.outputs.IMAGES && needs.pre-checks.outputs.PRE_CHECK != 'push'
+#    if: needs.prepare.outputs.IMAGES && needs.pre-checks.outputs.PRE_CHECK != 'push'
     runs-on: ec2-runners
     container:
       image: public.ecr.aws/m3u4c4h9/island-is/actions-runner-public:latest
