--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
     "kennitala": "2.0.0-beta.2",
     "libphonenumber-js": "1.7.53",
     "lodash": "4.17.21",
+    "lodash.flatten": "4.4.0",
     "lottie-web": "5.7.13",
     "markdown-to-jsx": "7.1.7",
     "memoizee": "0.4.15",
