--- a/charts/judicial-system/values.prod.yaml
+++ b/charts/judicial-system/values.prod.yaml
@@ -102,6 +102,7 @@ judicial-system-api:
 judicial-system-backend:
   enabled: true
   env:
+    BLOCKED_API_INTEGRATION: 'POLICE_CASE'
     COMPLETED_CASE_OVERVIEW_URL: 'https://rettarvorslugatt.island.is/krafa/yfirlit/'
     CONTENTFUL_HOST: 'cdn.contentful.com'
     DB_HOST: 'postgres-applications.internal'
