--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -97,10 +97,7 @@
     "dev": {
       "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "commands": [
-          "yarn start api",
-          "yarn start web"
-        ],
+        "commands": ["yarn start api", "yarn start web"],
         "parallel": true
       }
     },
