fix(qa): fixing the code bundling of the acceptance tests

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -158,6 +158,7 @@
         "libs/application/api/files/src/index.ts"
       ],
       "@island.is/application/core": ["libs/application/core/src/index.ts"],
+      "@island.is/application/core/messages": ["libs/application/core/src/lib/messages.ts"],
       "@island.is/application/core/polyfills": [
         "libs/application/core/src/lib/polyfills.ts"
       ],
